# madn

./: .gitignore  CMakeLists.txt  README.md  main.cpp  new.md
include/: Dice.h  Game.h  GameRunner.h  GameScheduler.h  Generator.h  Player.h  PlayerID.h  PlayerStrategy.h  RandomStrategy.h  Task.h  TurnAwaiter.h  constants.h
include/strategies/: CyclingStrategy.h  RandomStrategy.h
src/: Game.cpp  Game.hpp  GameRunner.cpp  GameScheduler.cpp  Player.cpp  RandomStrategy.cpp  TurnAwaiter.cpp  main.cpp  statistics.hpp
src/strategies/: CyclingStrategy.cpp  RandomStrategy.cpp
